--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
 <link href="./fonts/icons/styles.css" rel="stylesheet">
 <link href="./css/vendors.css" rel="stylesheet">
-<link href="./css/main.css" rel="stylesheet">
+<link href="./css/main.css?v=3" rel="stylesheet">
     
     <title>УралСтройГрад</title>
 </head>
@@ -763,7 +763,7 @@
 
     <script src="/js/vendors.js"></script>
 <script src="https://api-maps.yandex.ru/2.1/?lang=en_RU&amp;apikey=34b1a22d-01c4-459f-9f23-652d38f07484" type="text/javascript"></script>
-<script src="/js/main.js"></script>
+<script src="./js/main.js"></script>
 
 </body>
 
